Bug 330333 - Clicking with the mouse after using the stylus or viceversa doesn't work the first time
Summary: Clicking with the mouse after using the stylus or viceversa doesn't work the ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2014-01-23 16:06 UTC by Michel T Gonzalez
Modified: 2014-02-04 08:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michel T Gonzalez 2014-01-23 16:06:27 UTC
Most of the time, if I'm switching between mouse and stylus for input, the first click won't be registered, with either input device.
I'm not sure it happens all the time, but it's frequent enough that I have to click again for Krita to register the action.
For example, if I click on a brush with the stylus and draw a stroke, then switch to the mouse and attempt to paint on the canvas, the first stroke won't do anything.

It happens with other tools too.
Comment 1 Dmitry Kazakov 2014-02-02 15:06:29 UTC
Git commit b52a6af243700fc61fe8098bc59b54091b4922ce by Dmitry Kazakov.
Committed on 02/02/2014 at 15:06.
Pushed by dkazakov into branch 'master'.

Fix the ignored mouse events after using the tablet

Now each Mouse Event corresponds exactly to one Tablet Event.

M  +6    -19   krita/ui/input/kis_input_manager.cpp

http://commits.kde.org/calligra/b52a6af243700fc61fe8098bc59b54091b4922ce
Comment 2 Dmitry Kazakov 2014-02-04 08:27:12 UTC
Git commit 2f3c3605c996fd895b00b0fcd541992ea06ea927 by Dmitry Kazakov.
Committed on 02/02/2014 at 15:06.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix the ignored mouse events after using the tablet

Now each Mouse Event corresponds exactly to one Tablet Event.

M  +6    -19   krita/ui/input/kis_input_manager.cpp

http://commits.kde.org/calligra/2f3c3605c996fd895b00b0fcd541992ea06ea927