Fix the ignored mouse events after using the tablet

Now each Mouse Event corresponds exactly to one Tablet Event.

BUG:330333